Added basic environment, character and basic input handler

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/src/style.css"></link>
 </head>
 <body>
-    <canvas id = "gameScreen" width="800" height="600"></canvas>
+    <canvas  id = "gameScreen"></canvas>
+    <img id="img_llama" src="assets/images/llama.png">
     
     
-    <script src="/src/index.js"></script>
+    <script type="module" src="/src/index.js"></script>
 </body>
 </html>
